# inari

./: .gitignore  LICENSE  README.md  check.sh  pyproject.toml
src/compiler/: __main__.py  assembler.py  assembly_generator.py  ast.py  dataflow.py  interpreter.py  intrinsics.py  ir.py  ir_generator.py  location.py  parser.py  token.py  tokenizer.py  type_checker.py  types.py
tests/end2end/: end_2_end_test.py
tests/end2end/test_programs/: test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt  test_case_6.txt  test_case_7.txt
tests/interpreter/: interpreter_test.py
tests/parser/: parser_test.py
tests/tokenizer/: tokenizer_test.py
tests/type_checker/: type_checker_test.py
